# Eva

./: README.md  cli.py  main.py  models.py  pyproject.toml
http-proxy/: server.py
http-proxy/endpoints/: fetch.py  healthcheck.py  insert.py  testing.py  update.py
http_proxy/: server.py
mcp-proxy/: server.py
mcp-proxy/adapters/: base.py  claude.py
mcp_proxy/: server.py
mcp_proxy/adapters/: claude.py
scripts/: startup.py
src/eva/: cli.py
src/eva/http_proxy/: server.py
src/eva/http_proxy/endpoints/: healthcheck.py  insert.py  search.py
src/eva/mcp_proxy/: server.py
src/eva/mcp_proxy/adapters/: claude.py  cline.py  cursor.py
src/eva/utils/: config.py  file_manager.py
src/xeni/: cli.py
src/xeni/http_proxy/: server.py
src/xeni/http_proxy/endpoints/: healthcheck.py  insert.py  search.py
src/xeni/mcp_proxy/: server.py
src/xeni/mcp_proxy/adapters/: base.py  claude.py  cline.py  cursor.py
src/xeni/utils/: config.py  file_manager.py  models.py
utils/: context_manger.py  file_manager.py  update_agent_list.py
